# min-sized-rust-windows

./: Cargo.toml  build.rs
src/: main.rs
